objects/Charging_Data__c.object
<CustomObject>
    <fields>
        <fullName>Average_Duration__c</fullName>
        <description>The average number of minutes which a charging event lasted for.</description>
        <inlineHelpText>The average number of minutes which a charging event lasted for.</inlineHelpText>
        <label>Average Duration</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Events__c</fullName>
        <label>Charge Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>28</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LIN__c</fullName>
        <formula>Location_LIN__r.LIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_LIN_Site_Account__c</fullName>
        <formula>HYPERLINK(&quot;https://na52.salesforce.com/&quot;&amp; Location_LIN__r.Site_Account__c,Location_LIN__r.Site_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location (LIN) Site Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_LIN__c</fullName>
        <label>Location (LIN)</label>
        <referenceTo>Kiosk__c</referenceTo>
        <relationshipLabel>Charging Data</relationshipLabel>
        <relationshipName>Charging_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Monthly_kwhs__c</fullName>
        <label>Monthly kwhs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_End_Date__c</fullName>
        <label>Report End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Start_Date__c</fullName>
        <label>Report Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Account_Shipping_Address__c</fullName>
        <description>Address pull from Site Account Shipping Address field on Location (LIN) object.</description>
        <formula>Location_LIN__r.Site_Account_Shipping_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Account Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Days__c</fullName>
        <formula>(Report_End_Date__c - Report_Start_Date__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Charging Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Monthly_Charging_Data_Reports</fullName>
        <columns>Location_LIN__c</columns>
        <columns>Report_Start_Date__c</columns>
        <columns>Report_End_Date__c</columns>
        <columns>Monthly_kwhs__c</columns>
        <columns>Charge_Events__c</columns>
        <columns>Average_Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Start_Date__c</field>
            <operation>equals</operation>
            <value>3/1/2018</value>
        </filters>
        <label>Monthly Charging Data Reports</label>
    </listViews>
    <nameField>
        <label>Monthly Charging Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charging Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>